# rag-retrieval-mcp

./: .gitignore  README.md  pyproject.toml
src/rag_retrieval_mcp/: __init__.py  server.py
src/rag_retrieval_mcp/embedding_providers/: __init__.py  base.py  openai.py
src/rag_retrieval_mcp/vector_stores/: __init__.py  base.py  pgvector.py  pinecone.py
tests/: test_server.py
